posted a couple of forms and ideas

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Couch2Code</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <div ui-view></div>
     <script src="bundle.js"></script>
