--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app='couch2code'>
   <head>
     <title>Couch2Code</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <header class="jumbotron">
@@ -13,7 +13,7 @@
       </div>    
     </header>
     <div ui-view></div>
-    <script src='https://login.persona.org/include.js'></script>
-    <script src="bundle.js"></script>
+    <script src='//login.persona.org/include.js'></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
