worked on new challenges

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Couch2Code</title>
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="http://codemirror.net/lib/codemirror.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <header class="jumbotron">
@@ -14,6 +15,8 @@
     </header>
     <div ui-view></div>
     <script src='//login.persona.org/include.js'></script>
+    <script src="http://codemirror.net/lib/codemirror.js"></script>
+    <script src="http://codemirror.net/mode/markdown/markdown.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
